--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -16,3 +16,24 @@ header {
   .btn {
     font-size: 1.1rem;
   }
+  .navbar {
+    padding: 1rem 0;
+  }
+  
+  .navbar-brand {
+    font-size: 1.5rem;
+    font-weight: 500;
+  }
+  
+  .text-light {
+    font-weight: 500;
+  }
+  
+  .btn-outline-light:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+  }
+  
+  .btn i {
+    font-size: 0.9rem;
+  }
+ 
